functionality completed, everything working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="title">
             <h1>Retro Snake v.1.0</h1>
             <button class="start-reset-button">
-                Start / Reset button
+                START / RESET GAME
             </button>
             <div class="score">
                 0
@@ -123,6 +123,14 @@
             <div></div>
             <div></div>
             <div></div>
+
+
+
+
+        </div>
+
+        <div class="game-over">
+            <h1>GAME OVER !!!</h1>
         </div>
 
 
