--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake 3310</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/scss/style.css">
 </head>
 
 <body>
@@ -18,6 +18,8 @@
             <button class="start-reset-button">
                 START / RESET GAME
             </button>
+            <button class="switch-mode">SWITCH MODE</button>
+            <h3 class="game-rules">Rules: Snake can pass trough walls</h3>
             <div class="score">
                 0
             </div>
@@ -123,10 +125,6 @@
             <div></div>
             <div></div>
             <div></div>
-
-
-
-
         </div>
 
         <div class="game-over">
